@startuml

title __CONTROLLERS's Class Diagram__\n

  package Client {
    package Client.Controllers {
      class ClientWindow {
          + console : TextArea
          + messageField : TextField
          - running : boolean
          ~ listen : Thread
          ~ run : Thread
          + initialize()
          + onKeyPressed()
          + buttonClick()
          - printIntoChat()
          - send()
          - listen()
          + run()
      }
    }
  }
  

  package Client {
    package Client.Controllers {
      class Login {
          + username : TextField
          + address : TextField
          {static} + clientUsername : String
          {static} + serverAddress : String
          + login()
      }
    }
  }
  

  ClientWindow -up-|> Runnable
  ClientWindow -up-|> Initializable
  ClientWindow o-- Client : client


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
